Fix: Gray-color issue on mobile scroll

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   color: white;
   text-align: center;
